--- a/task/list-reqlimit.yaml
+++ b/task/list-reqlimit.yaml
@@ -4,7 +4,7 @@ metadata:
   name: list-reqlimit
   namespace: ops-system
 spec:
-  desc: use task `list-reqlimit` to list request and limit in specified namespace within a Kubernetes cluster
+  desc: use task `list-reqlimit` to list request and limit in cluster, variables must to set `namespace`
   nodeName: anymaster
   variables:
     namespace: "all"
