--- a/task/cordon-node.yaml
+++ b/task/cordon-node.yaml
@@ -4,7 +4,7 @@ metadata:
   name: cordon-node
   namespace: ops-system
 spec:
-  desc: use task `cordon-node` to cordon specified node within a Kubernetes cluster.
+  desc: use task `cordon-node` to cordon node in cluster, variables must to set `node`
   nodeName: anymaster
   variables:
     node: ""
