--- a/task/inspect-node.yaml
+++ b/task/inspect-node.yaml
@@ -4,7 +4,7 @@ metadata:
   name: inspect-node
   namespace: ops-system
 spec:
-  desc: use task `inspect-node` to get node details info within a Kubernetes cluster.
+  desc: use task `inspect-node` to get node details in cluster, variables must to set `node`
   nodeName: anymaster
   variables:
     node: ""
