--- a/task/list-clusters.yaml
+++ b/task/list-clusters.yaml
@@ -4,7 +4,7 @@ metadata:
   name: list-clusters
   namespace: ops-system
 spec:
-  desc: use task `list-clusters` to list all **clusters** in specified Kubernetes
+  desc: use task `list-clusters` to list all **clusters** in cluster, variables must to set `namespace`
   variables:
     namespace: ops-system
   nodeName: anymaster
