--- a/task/list-svcs.yaml
+++ b/task/list-svcs.yaml
@@ -4,7 +4,7 @@ metadata:
   name: list-svcs
   namespace: ops-system
 spec:
-  desc: use task `list-svcs` to list **svc** in specified namespace within a Kubernetes cluster
+  desc: use task `list-svcs` to list **svc** in cluster, variables must to set `namespace`
   nodeName: anymaster
   variables:
     namespace: ops-system
