--- a/task/list-tasks.yaml
+++ b/task/list-tasks.yaml
@@ -4,7 +4,7 @@ metadata:
   name: list-tasks
   namespace: ops-system
 spec:
-  desc: use task `list-task` to list all **tasks** in specified namespace within a Kubernetes cluster
+  desc: use task `list-task` to list all **tasks** in cluster, variables must to set `namespace`
   variables:
     namespace: ops-system
   nodeName: anymaster
