--- a/task/top-nodes-bycpu.yaml
+++ b/task/top-nodes-bycpu.yaml
@@ -4,7 +4,7 @@ metadata:
   name: top-nodes-bycpu
   namespace: ops-system
 spec:
-  desc: use task `top-nodes-bycpu` to list topK usage cpu of nodes in specified cluster
+  desc: use task `top-nodes-bycpu` to list topK usage cpu of nodes in cluster, variables avaliable to set `topk`
   nodeName: anymaster
   variables:
     topk: "20"
