--- a/task/top-pods-bymem-node.yaml
+++ b/task/top-pods-bymem-node.yaml
@@ -4,13 +4,13 @@ metadata:
   name: top-pods-bymem-node
   namespace: ops-system
 spec:
-  desc: use task `top-node-pods-bymem` to list topK usage memory of pods in specified node
+  desc: use task `top-node-pods-bymem` to list topK usage memory of pods in node, variables must to set `node`, avaliable to set `topk`
   nodeName: anymaster
   variables:
     node: ""
     topk: "20"
   steps:
-    - name: list topK usage memory of pods in specified node
+    - name: list topK usage memory of pods in node
       content: |
         echo "NAME                    CPU(m)          MEMORY(Mi) "
         kubectl get pods -A -o wide | grep ${node} | awk '{print $1, $2}' | while read ns pod; do kubectl top pod  --no-headers -n "$ns" "$pod"; done 2>&1 | grep -v "NotFound" | awk '{sub(/m/, "", $2); sub(/Mi/, "", $3); print}' | sort -k3,3nr
