--- a/task/check-svc-existed.yaml
+++ b/task/check-svc-existed.yaml
@@ -4,10 +4,10 @@ metadata:
   name: check-svc-existed
   namespace: ops-system
 spec:
-  desc: use task `check-svc-existed` to check whether the service existed and get service namespace, variables must to set `service`
+  desc: use task `check-svc-existed` to check whether the svc existed and get svc namespace, variables must to set `svc`
   variables:
-    service: ""
+    svc: ""
   steps:
-    - name: Check service existed
+    - name: Check svc existed
       content: |
-        found="false"; if [ -z "$service" ]; then echo "service is empty"; else for ns in $(kubectl get namespaces --no-headers | awk '{print $1}'); do if kubectl get service ${service} -n $ns &>/dev/null; then echo "Pod ${service} existed in $ns"; found="true"; fi; done; if [ "$found" = "false" ]; then echo "Pod ${service} not found"; fi; fi
+        found="false"; if [ -z "$svc" ]; then echo "svc is empty"; else for ns in $(kubectl get namespaces --no-headers | awk '{print $1}'); do if kubectl get svc ${svc} -n $ns &>/dev/null; then echo "Pod ${svc} existed in $ns"; found="true"; fi; done; if [ "$found" = "false" ]; then echo "Pod ${svc} not found"; fi; fi
