--- a/task/get-podlogs-bysvc.yaml
+++ b/task/get-podlogs-bysvc.yaml
@@ -4,11 +4,11 @@ metadata:
   name: get-podlogs-bysvc
   namespace: ops-system
 spec:
-  desc: use task `get-podlogs-bysvc` to get pod logs in cluster, variables must to set `service`, avaliable to set `topk`
+  desc: use task `get-podlogs-bysvc` to get pod logs in cluster, variables must to set `svc`, avaliable to set `topk`
   nodeName: anymaster
   variables:
-    service: ""
+    svc: ""
     topk: "50"
   steps:
-    - name: get pod topk logs by service name
-      content: kubectl get service --all-namespaces | grep ${service} | awk '{print $1}' | xargs -L1 kubectl logs -l app=${service} --tail=${topk} -n
+    - name: get pod topk logs by svc name
+      content: kubectl get svc --all-namespaces | grep ${svc} | awk '{print $1}' | xargs -L1 kubectl logs -l app=${svc} --tail=${topk} -n
