improvement: add selector for task and fix disk shell

--- a/charts/ops/crds/crd.chenshaowen.com_tasks.yaml
+++ b/charts/ops/crds/crd.chenshaowen.com_tasks.yaml
@@ -62,6 +62,10 @@ spec:
                 type: string
               runtimeImage:
                 type: string
+              selector:
+                additionalProperties:
+                  type: string
+                type: object
               steps:
                 items:
                   properties:
