--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ Dockerfile.cross
 
 # Test binary, build with `go test -c`
 *.test
+*test.yaml
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
