--- a/task/alert-gpu-drop.yaml
+++ b/task/alert-gpu-drop.yaml
@@ -24,14 +24,14 @@ spec:
     - name: notifaction
       when: not startwith(${result}, OK)
       content: |
-        curl -X POST ${notifaction} -H 'content-type: application/json' -d '{ "msgtype": "text", "text": { "content": "${hostname} lspci GPU count mismatch: $GPU_LSPCI_COUNT vs ${desired_gpu_count}" } }'
+        curl -X POST ${notifaction} -H 'content-type: application/json' -d '{ "msgtype": "text", "text": { "content": "${hostname} lspci GPU count mismatch: ${desired_gpu_count}" } }'
     - name: Check nvidia-smi GPU Count
       content: |
         GPU_SMI_COUNT=$(nvidia-smi -L | wc -l); if [ $GPU_SMI_COUNT -eq ${desired_gpu_count} ]; then echo "OK - nvidia-smi GPU count matches ${desired_gpu_count}"; else echo "ERROR - nvidia-smi GPU count mismatch: $GPU_SMI_COUNT vs ${desired_gpu_count}"; fi
     - name: notifaction
       when: not startwith(${result}, OK)
       content: |
-        curl -X POST ${notifaction} -H 'content-type: application/json' -d '{ "msgtype": "text", "text": { "content": "${hostname} nvidia-smi GPU count mismatch: $GPU_SMI_COUNT vs ${desired_gpu_count}" } }'
+        curl -X POST ${notifaction} -H 'content-type: application/json' -d '{ "msgtype": "text", "text": { "content": "${hostname} nvidia-smi GPU count mismatch: ${desired_gpu_count}" } }'
     - name: Revision FF
       content: |
         if lspci -d 10de: | grep -q "rev ff"; then echo "ERROR - 'rev ff' found in lspci output"; else echo "OK - No 'rev ff' found"; fi
