--- a/charts/ops/templates/clusterrole.yaml
+++ b/charts/ops/templates/clusterrole.yaml
@@ -127,8 +127,13 @@ rules:
   resources:
   - events
   verbs:
+  - get
+  - list
+  - watch
   - create
+  - update
   - patch
+  - delete
 - apiGroups:
   - ""
   resources:
@@ -136,4 +141,9 @@ rules:
   verbs:
   - get
   - list
+  - watch
+  - create
+  - update
+  - patch
+  - delete
 {{- end -}}
