--- a/task/get-os-status.yaml
+++ b/task/get-os-status.yaml
@@ -14,6 +14,7 @@ spec:
       content: echo `free -m | awk 'NR==2{printf "%.2f%%\n", $3*100/$2 }'`/`free -h | awk '/^Mem:/{print $2}'`
     - name: Disk Usage Percent/Total
       content: timeout 5 df -H | grep -vE '^Filesystem|tmpfs|cdrom|loop|udev' | awk '{ print $5 "/" $2 " " $1 }' |grep " "/
+      allowfailure: "true"
     - name: TCP TIME_WAIT Usage/Total
       content: echo `netstat -an | grep TIME_WAIT | wc -l`/`cat /proc/sys/net/ipv4/tcp_max_tw_buckets`
     - name: NF_Conntrack Usage/Total
