--- a/task/list-pods-bysvc.yaml
+++ b/task/list-pods-bysvc.yaml
@@ -14,4 +14,4 @@ spec:
       content: |
         SELECTOR=$(kubectl get svc ${svc} -n ${namespace} -o jsonpath='{.spec.selector}' 2>/dev/null);
         SELECTOR_ARGS=$(echo ${SELECTOR} | sed 's/{//;s/}//' | sed 's/,/ -l /g' | sed 's/:/=/g' | sed 's/^/-l /');
-        kubectl get pods ${SELECTOR_ARGS} -n ${namespace};
+        kubectl get pods ${SELECTOR_ARGS} -o wide -n ${namespace};
