--- a/task/get-pod-logs-bysvc.yaml
+++ b/task/get-pod-logs-bysvc.yaml
@@ -1,10 +1,10 @@
 apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
-  name: get-podlogs-bysvc
+  name: get-pod-logs-bysvc
   namespace: ops-system
 spec:
-  desc: use task `get-podlogs-bysvc` to get pod logs in cluster, variables must to set `svc`, avaliable to set `topk`
+  desc: use task `get-pod-logs-bysvc` to get pod logs in cluster, variables must to set `svc`, avaliable to set `topk`
   nodeName: anymaster
   variables:
     svc: ""
