--- a/task/list-events-bypod.yaml
+++ b/task/list-events-bypod.yaml
@@ -8,7 +8,7 @@ spec:
   nodeName: anymaster
   variables:
     topk: "50"
-    pod: ""
+    podname: ""
   steps:
     - name: list pod events
-      content: kubectl get pod --all-namespaces | grep ${pod} | awk '{print $1}' | xargs -L1 kubectl get events -n |grep ${pod} | awk '{$1=$2=$3=$4=""; print $0}' | head -n ${topk}
+      content: kubectl get pod --all-namespaces | grep ${podname} | awk '{print $1}' | xargs -L1 kubectl get events -n |grep ${podname} | awk '{$1=$2=$3=$4=""; print $0}' | head -n ${topk}
