--- a/task/top-pods-bymem-node.yaml
+++ b/task/top-pods-bymem-node.yaml
@@ -12,5 +12,5 @@ spec:
   steps:
     - name: list topK usage memory of pods in node
       content: |
-        echo "NAME                    CPU(m)          MEMORY(Mi) "
-        kubectl get pods -A -o wide | grep ${node} | awk '{print $1, $2}' | while read ns pod; do kubectl top pod  --no-headers -n "$ns" "$pod"; done 2>&1 | grep -v "NotFound" | awk '{sub(/m/, "", $2); sub(/Mi/, "", $3); print}' | sort -k3,3nr
+        echo "NAME                 CPU(m)          MEMORY(Mi) "
+        kubectl get pods -A -o wide | grep ${node} | awk '{print $1, $2}' | while read ns pod; do kubectl top pod  --no-headers -n "$ns" "$pod"; done 2>&1 | grep -v "NotFound" | awk '{sub(/m/, "", $2); sub(/Mi/, "", $3); print}' | sort -k3,3nr | head -$((${topk}+1))
