--- a/task/check-pod-existed.yaml
+++ b/task/check-pod-existed.yaml
@@ -11,4 +11,4 @@ spec:
   steps:
     - name: Check pod existed
       content: |
-        found="false"; if [ -z "${podname}" ]; then echo "pod is empty"; else for ns in $(kubectl get namespaces --no-headers | awk '{print $1}'); do if kubectl get pod ${podname} -n $ns &>/dev/null; then echo "Pod ${podname} existed in $ns"; found="true"; fi; done; if [ "$found" = "false" ]; then echo "Pod ${podname} not found"; fi; fi
+        found=$(kubectl get pods --all-namespaces | awk -v pn="$podname" '$2 ~ pn {print $1; exit}'); [ -n "$found" ] && echo "Pod $podname found in $found" || echo "Pod $podname not found"
