--- a/task/delete-pod.yaml
+++ b/task/delete-pod.yaml
@@ -4,11 +4,11 @@ metadata:
   name: delete-pod
   namespace: ops-system
 spec:
-  desc: use task `delete-pod` to restart or delete pod in cluster, variables must to set `podname`、`namespace`. You can't use task `delete-pod` unless I specifically state that.
+  desc: use task `delete-pod` to restart or delete pod in cluster, variables must to set `podname`.
   nodeName: anymaster
   variables:
     podname: ""
-    namespace: ""
   steps:
     - name: delete pod
-      content: kubectl delete pod -n ${namespace} ${podname}
+      content: |
+        kubectl get pod --all-namespaces | grep ${pod} | awk '{print $1, $2}' | xargs -L1 kubectl delete pod -n
