--- a/task/alert-gpu-drop.yaml
+++ b/task/alert-gpu-drop.yaml
@@ -14,33 +14,42 @@ spec:
     notifaction: "https://xz.wps.cn/api/v1/webhook/send?key="
   steps:
     - name: Check nvidia-smi
+      allowfailure: "true"
       content: command -v nvidia-smi
     - name: notifaction
+      allowfailure: "true"
       when: not endwith(${result}, nvidia-smi)
       content: |
         curl -X POST ${notifaction} -H 'content-type: application/json' -d '{ "msgtype": "text", "text": { "content": "${hostname} can not find command nvidia-smi" } }'
     - name: Check lspci GPU Count
+      allowfailure: "true"
       content: |
         GPU_LSPCI_COUNT=$(lspci -d 10de: | grep -v 1af1 | grep -v Audio | grep -v USB | wc -l); if [ $GPU_LSPCI_COUNT -eq ${desired_gpu_count} ]; then echo "OK - lspci GPU count matches ${desired_gpu_count}"; else echo "ERROR - lspci GPU count mismatch: $GPU_LSPCI_COUNT vs ${desired_gpu_count}"; fi
     - name: notifaction
+      allowfailure: "true"
       when: not startwith(${result}, OK)
       content: |
         curl -X POST ${notifaction} -H 'content-type: application/json' -d '{ "msgtype": "text", "text": { "content": "${hostname} lspci GPU count mismatch: ${desired_gpu_count}" } }'
     - name: Check nvidia-smi GPU Count
+      allowfailure: "true"
       content: |
         GPU_SMI_COUNT=$(nvidia-smi -L | wc -l); if [ $GPU_SMI_COUNT -eq ${desired_gpu_count} ]; then echo "OK - nvidia-smi GPU count matches ${desired_gpu_count}"; else echo "ERROR - nvidia-smi GPU count mismatch: $GPU_SMI_COUNT vs ${desired_gpu_count}"; fi
     - name: notifaction
+      allowfailure: "true"
       when: not startwith(${result}, OK)
       content: |
         curl -X POST ${notifaction} -H 'content-type: application/json' -d '{ "msgtype": "text", "text": { "content": "${hostname} nvidia-smi GPU count mismatch: ${desired_gpu_count}" } }'
     - name: Revision FF
+      allowfailure: "true"
       content: |
         if lspci -d 10de: | grep -q "rev ff"; then echo "ERROR - 'rev ff' found in lspci output"; else echo "OK - No 'rev ff' found"; fi
     - name: notifaction
+      allowfailure: "true"
       when: not startwith(${result}, OK)
       content: |
         curl -X POST ${notifaction} -H 'content-type: application/json' -d '{ "msgtype": "text", "text": { "content": "${hostname} 'rev ff' found in lspci output" } }'
     - name: XID Error
+      allowfailure: "true"
       content: |
         msg=$(dmesg --time-format iso | grep -i "NVRM: Xid" | tail -1)
         if [ -n "$msg" ]; then
@@ -58,6 +67,7 @@ spec:
             echo "OK - No Xid error found"
         fi
     - name: notifaction
+      allowfailure: "true"
       when: not startwith(${result}, OK)
       content: |
         curl -X POST ${notifaction} -H 'content-type: application/json' -d '{ "msgtype": "text", "text": { "content": "${hostname} Xid error found in dmesg" } }'
